# jimaku-editor

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  PROGRESS_REPORT.md  README.en.md  TODO.md
.readme/: example.sup
CLI/: CMakeLists.txt  main.cpp
CMake/Modules/: CreateTarget.cmake
PGSEncoder/: CMakeLists.txt  main.c
SubtitleParser/: CMakeLists.txt  srtparser.cpp  srtparser.hpp  styledsrtparser.cpp  styledsrtparser.hpp
SubtitleRenderer/: CMakeLists.txt  pgsframecreator.cpp  pgsframecreator.hpp  pngrenderer.cpp  pngrenderer.hpp
Tests/: CMakeLists.txt  main.cpp  renderertest.cpp  renderertest.hpp  srtparsertest.cpp  srtparsertest.hpp  test_custom.ja.srt
cli/: CMakeLists.txt  main.cpp
cli/libs/: cxxopts.hpp  cxxopts.hpp.md  ordered_map.hpp  ordered_set.hpp
cmake/modules/: SetCStandard.cmake
config/: CMakeLists.txt  version_private.hpp.in
config/include/config/: version.hpp
config/src/: version.cpp
doc/: BUILD_INSTRUCTIONS_UNIX.md  DOCUMENTATION.en.md
libs/: CMakeLists.txt
pgs-encoder/: CMakeLists.txt  main.c
subtitle-parser/: CMakeLists.txt
subtitle-parser/include/srtparser/: srtparser.hpp  styledsrtparser.hpp
subtitle-parser/src/: srtparser.cpp  styledsrtparser.cpp
subtitle-renderer/: CMakeLists.txt
subtitle-renderer/include/renderer/: helpers.hpp  pgsframecreator.hpp  pngrenderer.hpp
subtitle-renderer/libs/lodepng/: lodepng.cpp
subtitle-renderer/src/: helpers.cpp  pgsframecreator.cpp  pngrenderer.cpp
tests/: CMakeLists.txt  main.cpp  renderertest.cpp  renderertest.hpp  srtparsertest.cpp  srtparsertest.hpp  test_short.ja.srt
